fix profile layout break

--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -7,7 +7,7 @@
 
 .gridContainer {
     flex: 1 0 auto;
-    padding: 80px 0;
+    padding-top: 80px;
 }
 
 .form {
